Client ID change

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             var feed = new Instafeed({
                 get: 'tagged',
                 tagName: 'awesome',
-                clientId: 'YOUR_CLIENT_ID'
+                clientId: 'ab805800dec24b77b496bf83cb12f4d6D'
             });
             feed.run();
         </script>
