--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <script type="text/javascript" src="instafeed.min.js"></script>
     </head>
     <body>
+        <p>this appears</p>
         <div id="instafeed">
         
         
