--- a/index.html
+++ b/index.html
@@ -1,19 +1,83 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <script type="text/javascript" src="instafeed.js"></script>
-    </head>
-    <body>
-        <p>this appears</p>
-        <div id="instafeed">
-        </div>
-        <script type="text/javascript">
-            var feed = new Instafeed({
-                get: 'tagged',
-                tagName: 'awesome',
-                clientId: 'ab805800dec24b77b496bf83cb12f4d6'
-            });
-            feed.run();
-        </script>
-    </body>
+<!DOCTYPE HTML>
+<head>
+<meta name="viewport" content="width = 1050, user-scalable = no" />
+<script type="text/javascript" src="js/jquery.min.1.7.js"></script>
+<script type="text/javascript" src="js/modernizr.2.5.3.min.js"></script>
+<script src='https://code.responsivevoice.org/responsivevoice.js'></script>
+</head>
+	<body>
+
+	<div class="flipbook-viewport">
+		<div class="row">
+			Page:<input type="text" id="pageFld" disabled/>
+			<button id="prevBtn">Previous</button>
+			<button id="nextBtn">Next</button>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="flipbook" id="book">
+					<div style="background-image:url(pages/1.jpg)"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<script type="text/javascript">
+	function loadApp() {
+		$('.flipbook').turn({
+				width:922,
+				height:600,
+				elevation: 50,
+				gradients: true,
+				autoCenter: true
+		});
+
+		$(".flipbook").bind("turned", function(event, page, view) {
+				$("#pageFld").val(page);
+		});
+
+		$("#prevBtn").click(function() {
+				$(".flipbook").turn("previous");
+		});
+
+		$("#nextBtn").click(function() {
+				$(".flipbook").turn("next");
+		});
+
+		$('p').mouseenter(function() {
+		  responsiveVoice.cancel();
+		  responsiveVoice.speak($(this).text(),  "UK English Male");
+		});
+		$('p').mouseleave(function() {
+		  responsiveVoice.cancel();
+	  });
+
+
+		$(document).keydown(function(e){
+		    if (e.keyCode == 37)
+		    	$(".flipbook").turn("previous");
+				else if (e.keyCode == 39)
+					$(".flipbook").turn("next");
+		});
+	}
+
+	yepnope({
+		test : Modernizr.csstransforms,
+		yep: ['js/turn.js'],
+		nope: ['js/turn.html4.min.js'],
+		both: ['css/basic.css'],
+		complete: loadApp
+	});
+
+
+	jQuery('#book').append( jQuery('<div>').load("pages/2.html") );
+	jQuery('#book').append( jQuery('<div>').load("pages/3.html") );
+	jQuery('#book').append( jQuery('<div>').load("pages/4.html") );
+	jQuery('#book').append( jQuery('<div>').load("pages/5.html") );
+	jQuery('#book').append( jQuery('<div>').load("pages/6.html") );
+	jQuery('#book').append( jQuery('<div>').load("pages/7.html") );
+	</script>
+
+
+	</body>
 </html>
