--- a/index.html
+++ b/index.html
@@ -1,83 +1,27 @@
-<!DOCTYPE HTML>
-<head>
-<meta name="viewport" content="width = 1050, user-scalable = no" />
-<script type="text/javascript" src="js/jquery.min.1.7.js"></script>
-<script type="text/javascript" src="js/modernizr.2.5.3.min.js"></script>
-<script src='https://code.responsivevoice.org/responsivevoice.js'></script>
-</head>
-	<body>
-
-	<div class="flipbook-viewport">
-		<div class="row">
-			Page:<input type="text" id="pageFld" disabled/>
-			<button id="prevBtn">Previous</button>
-			<button id="nextBtn">Next</button>
-		</div>
-		<div class="container">
-			<div class="row">
-				<div class="flipbook" id="book">
-					<div style="background-image:url(pages/1.jpg)"></div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<script type="text/javascript">
-	function loadApp() {
-		$('.flipbook').turn({
-				width:922,
-				height:600,
-				elevation: 50,
-				gradients: true,
-				autoCenter: true
-		});
-
-		$(".flipbook").bind("turned", function(event, page, view) {
-				$("#pageFld").val(page);
-		});
-
-		$("#prevBtn").click(function() {
-				$(".flipbook").turn("previous");
-		});
-
-		$("#nextBtn").click(function() {
-				$(".flipbook").turn("next");
-		});
-
-		$('p').mouseenter(function() {
-		  responsiveVoice.cancel();
-		  responsiveVoice.speak($(this).text(),  "UK English Male");
-		});
-		$('p').mouseleave(function() {
-		  responsiveVoice.cancel();
-	  });
-
-
-		$(document).keydown(function(e){
-		    if (e.keyCode == 37)
-		    	$(".flipbook").turn("previous");
-				else if (e.keyCode == 39)
-					$(".flipbook").turn("next");
-		});
-	}
-
-	yepnope({
-		test : Modernizr.csstransforms,
-		yep: ['js/turn.js'],
-		nope: ['js/turn.html4.min.js'],
-		both: ['css/basic.css'],
-		complete: loadApp
-	});
-
-
-	jQuery('#book').append( jQuery('<div>').load("pages/2.html") );
-	jQuery('#book').append( jQuery('<div>').load("pages/3.html") );
-	jQuery('#book').append( jQuery('<div>').load("pages/4.html") );
-	jQuery('#book').append( jQuery('<div>').load("pages/5.html") );
-	jQuery('#book').append( jQuery('<div>').load("pages/6.html") );
-	jQuery('#book').append( jQuery('<div>').load("pages/7.html") );
-	</script>
-
-
-	</body>
+<html lang='en'>
+  <head>
+    <meta charset='utf-8' />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://momentjs.com/downloads/moment.min.js"></script>
+    <script src='https://unpkg.com/tooltip.js/dist/umd/tooltip.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.1.0/fullcalendar.js'></script>
+    <link rel='stylesheet' href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.1.0/fullcalendar.min.css" />
+    <style>
+      .tooltip
+      {
+        opacity: 1;
+      }
+    </style>
+  </head>
+  <body>
+    <select id="booking_selector">
+      <option value="all">All</option>
+      <option value="lightgreen">Booked</option>
+      <option value="yellow">Pencil</option>
+      <option value="red">Pending</option>
+    </select>
+    
+    <div id='calendar'></div>
+  	<script src='calendar.js'></script>
+  </body>
 </html>
