--- a/index.html
+++ b/index.html
@@ -7,21 +7,56 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.1.0/fullcalendar.js'></script>
     <link rel='stylesheet' href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.1.0/fullcalendar.min.css" />
     <style>
-      .tooltip
-      {
-        opacity: 1;
+      body {
+        font: 14px Arial;
+        margin: 2em 4em;
       }
+      #calendar {
+        display: block;
+        margin-top: 1em;
+      }
+      .fc-more-popover {
+        overflow-y: scroll;
+        max-height: 20%;
+        max-width: 40%;
+      }
+      #loading {
+        width: 100%;
+        height: 100%;
+        top: 200px;
+        left: 500px;
+
+        position: fixed;
+        display: block;
+        opacity: 0.7;
+        z-index: 99;
+        text-align: center;
+      }
+      #loading-image {
+          position: absolute;
+          top: 150px;
+          left: 220px;
+          z-index: 100;
+          width: 100px;
+      } 
     </style>
   </head>
   <body>
-    <select id="booking_selector">
-      <option value="all">All</option>
-      <option value="lightgreen">Booked</option>
-      <option value="yellow">Pencil</option>
-      <option value="red">Pending</option>
-    </select>
-    
+    <div style="display: block;">
+      <h2 style="margin-top:0;float: left;">Small Anawangin Beach Booking Calendar</h2>
+      <div style="float: right;"">
+        <label for="booking_selector">Filter:</label>
+        <select id="booking_selector">
+          <option value="all">All</option>
+          <option value="lightgreen">Booked</option>
+          <option value="yellow">Pencil</option>
+          <option value="red">Pending</option>
+        </select>
+      </div>
+    </div>
+    <div style="clear: both"></div>
     <div id='calendar'></div>
+    <div id="loading" style="display:none;"><img id="loading-image" src="loading.gif" alt="Loading..." /></div>
   	<script src='calendar.js'></script>
   </body>
 </html>
